compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_tuple_pattern_nested.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/tuple_pattern_nested.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unsupported tuple item pattern
   ╭─[tests/fixtures/diagnostics/types/tuple_pattern_nested.ml:4:6]
 3 │   dbg(match value {
 4 │     (1, right) -> right,
   ·      ┬
   ·      ╰── stage0 can bind tuple items of type `i64`, but cannot destructure nested tuple item patterns yet
 5 │     _ -> 0
   ╰────
  help: use a binder or `_` for tuple items in this slice
